--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - docker build -t amarieob/docker-react -f Dockerfile.dev .
 
 script:
-  -docker run -e CI=true amarieob/docker-react npm run test -- --coverage
+  -docker run amarieob/docker-react npm run test -- --coverage
